eat sleep rave repeat

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
   <button type="button" id="tinder" class="gather" onclick="gather(this.id)">Tinder</button>
   <button type="button" id="berries" class="gather" onclick="gather(this.id)">Berries</button>
   <button type="button" id="water" class="gather" onclick="gather(this.id)">Water</button>
+  <br>
+  <br>
+  <label for="">Dilly-dally:</label>
+  <button type="button" id="eat" class="gather" onclick="consoom(this.id, 'berries')">Eat</button>
+  <button type="button" id="sleep" class="gather" onclick="consoom(this.id, 'tinder')">Sleep</button>
+  <button type="button" id="rave" class="gather" onclick="consoom(this.id, 'water')">Rave</button>
 
   <script src="script.js"></script>
 </body>
