needs progressbars update on actions

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   <br>
   <br>
   <label>Dilly-dally:</label>
-  <button type="button" id="eat" class="gather" onclick="consoom(this.id, 'berries', 'progress_hunger')">Eat</button>
-  <button type="button" id="sleep" class="gather" onclick="consoom(this.id, 'tinder', 'progress_drowsiness')">Sleep</button>
-  <button type="button" id="rave" class="gather" onclick="consoom(this.id, 'water', 'progress_thirst')">Rave</button>
+  <button type="button" id="eat" class="gather" onclick="consoom(this.id)">Eat</button>
+  <button type="button" id="sleep" class="gather" onclick="consoom(this.id)">Sleep</button>
+  <button type="button" id="rave" class="gather" onclick="consoom(this.id)">Rave</button>
   <progress id="progress_dally" max="100" value="0"></progress>
   <br>
   <br>
